# agent-spark

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README_zh.md  architecture.md  fix_audit.txt  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  domain_suggestion.md  feature_request.md  question.md
.github/workflows/: test.yml
agent_spark/: __init__.py  __main__.py  api.py  cli.py  demo.py  demo_full.py  generator.py  locale.py  pipeline.py  spark_ideate.py
agent_spark/audit/: USAGE.md  __init__.py  auditor.py  checklist.md
agent_spark/data/: __init__.py  defaults.json
agent_spark/filter/: __init__.py  five_layer_filter.py
agent_spark/presets/: __init__.py  domains.json
agent_spark/prompts/: __init__.py  diverge.md  refine.md  search-queries.md
agent_spark/questions/: __init__.py  five_rounds.md
agent_spark/search/: __init__.py  searcher.py
app/: playground.py
docs/: interagent-audit-report.md  interagent-plan.txt  security-annex.md
huggingface/: app.py  deploy.sh  requirements.txt
integrations/claude-code/: agent_spark_bridge.sh
integrations/codex/: README.md
integrations/hermes/: SKILL.md
integrations/openclaw/: export.js  manifest.json  panel.html  panel.js  search.js  storage.js
tests/: __init__.py  test_filter.py  test_generator.py  test_presets.py
