[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-idea-spark"
version = "0.9.0-beta"
description = "Offline creative idea convergence engine for Hermes/Claude Code/Codex CLI/OpenClaw. Built-in 20-domain pain-point knowledge base + 5-layer local rule filter — no LLM chain required. Dual mode: pure offline / LLM-enhanced."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hermes Agent", email = "opensource@nousresearch.com"}
]
keywords = [
    "ai-agent", "agent-tools", "idea-generation", "creativity", "brainstorming",
    "innovation", "llm", "ai-filter", "creative-mining",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users / Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/jzfjs2008-ship-it/agent-spark"
Repository = "https://github.com/jzfjs2008-ship-it/agent-spark"
Documentation = "https://github.com/jzfjs2008-ship-it/agent-spark#readme"
Issues = "https://github.com/jzfjs2008-ship-it/agent-spark/issues"

[project.scripts]
agent-spark-demo = "agent_spark.demo:main"
agent-spark-demo-full = "agent_spark.demo_full:main"
agent-spark-filter = "agent_spark.filter.five_layer_filter:main"
agent-spark-audit = "agent_spark.audit.auditor:main"
agent-spark-pipeline = "agent_spark.pipeline:main"
agent-spark-presets = "agent_spark.cli:main"

[tool.setuptools.packages.find]
include = ["agent_spark", "agent_spark.*"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
search = ["httpx>=0.27"]
api = ["fastapi>=0.110", "uvicorn>=0.20", "pydantic>=2.0"]
